--- a/.github/workflows/papeline.yml
+++ b/.github/workflows/papeline.yml
@@ -3,6 +3,9 @@ name: Deployment pipeline
 on:
   push:
     branches: [main]
+  pull_request:
+    branches: [main]
+    types: [opened, synchronize]
 
 jobs: 
   deploy:
@@ -13,6 +16,7 @@ jobs:
         with:
           node-version: '17'
       - name: Install dependencies
-        run: npm install
+        run: npm ci --no-audit --no-fund --no-optional 
       - name: lint
         run: npm run lint
+      
