--- a/package.json
+++ b/package.json
@@ -3,13 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.1",
-    "@testing-library/react": "^12.1.2",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
+    "@testing-library/jest-dom": "5.16.1",
+    "@testing-library/react": "12.1.2",
+    "@testing-library/user-event": "13.5.0",
+    "firebase": "9.6.3",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
     "react-scripts": "5.0.0",
-    "web-vitals": "^2.1.3"
+    "web-vitals": "2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -17,7 +18,8 @@
     "eject": "react-scripts eject",
     "lint": "npx eslint .",
     "test": "react-scripts test",
-    "test:watch": "react-scripts test --watch"
+    "test:watch": "react-scripts test --watch",
+    "co":"npx sui-mono commit"
   },
   "eslintConfig": {
     "extends": [
@@ -38,11 +40,12 @@
     ]
   },
   "devDependencies": {
-    "eslint": "^7.32.0",
-    "eslint-config-standard": "^16.0.3",
-    "eslint-plugin-import": "^2.25.4",
-    "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.2.0",
-    "eslint-plugin-react": "^7.28.0"
+    "@s-ui/mono": "^2.18.0",
+    "eslint": "8.6.0",
+    "eslint-config-standard": "16.0.3",
+    "eslint-plugin-import": "2.25.4",
+    "eslint-plugin-node": "11.1.0",
+    "eslint-plugin-promise": "6.0.0",
+    "eslint-plugin-react": "7.28.0"
   }
 }
