--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build",
+    "build": "npm run build:css && react-scripts build",
     "eject": "react-scripts eject",
     "lint": "npx eslint .",
     "test": "react-scripts test",
     "test:watch": "react-scripts test --watch",
-    "co":"npx sui-mono commit"
+    "co": "npx sui-mono commit",
+    "build:css": "postcss src/assets/tailwind.css -o src/assets/main.css",
+    "watch:css": "postcss src/assets/tailwind.css -o src/assets/main.css -w"
   },
   "eslintConfig": {
     "extends": [
@@ -41,11 +43,14 @@
   },
   "devDependencies": {
     "@s-ui/mono": "^2.18.0",
+    "autoprefixer": "^10.4.2",
     "eslint": "8.6.0",
     "eslint-config-standard": "16.0.3",
     "eslint-plugin-import": "2.25.4",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "6.0.0",
-    "eslint-plugin-react": "7.28.0"
+    "eslint-plugin-react": "7.28.0",
+    "postcss-cli": "^9.1.0",
+    "tailwindcss": "^3.0.18"
   }
 }
