--- a/package.json
+++ b/package.json
@@ -3,15 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "5.16.1",
+    "@testing-library/jest-dom": "5.16.2",
     "@testing-library/react": "12.1.2",
     "@testing-library/user-event": "13.5.0",
-    "firebase": "9.6.3",
-    "formik": "^2.2.9",
+    "firebase": "9.6.6",
+    "formik": "2.2.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-scripts": "5.0.0",
-    "web-vitals": "2.1.3"
+    "web-vitals": "2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -43,15 +43,15 @@
     ]
   },
   "devDependencies": {
-    "@s-ui/mono": "^2.18.0",
-    "autoprefixer": "^10.4.2",
-    "eslint": "8.6.0",
+    "@s-ui/mono": "2.21.0",
+    "autoprefixer": "10.4.2",
+    "eslint": "8.9.0",
     "eslint-config-standard": "16.0.3",
     "eslint-plugin-import": "2.25.4",
     "eslint-plugin-node": "11.1.0",
     "eslint-plugin-promise": "6.0.0",
     "eslint-plugin-react": "7.28.0",
-    "postcss-cli": "^9.1.0",
-    "tailwindcss": "^3.0.18"
+    "postcss-cli": "9.1.0",
+    "tailwindcss": "3.0.22"
   }
 }
