--- a/package.json
+++ b/package.json
@@ -4,13 +4,13 @@
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "5.16.2",
-    "@testing-library/react": "12.1.2",
+    "@testing-library/react": "12.1.3",
     "@testing-library/user-event": "13.5.0",
-    "firebase": "9.6.6",
+    "firebase": "9.6.7",
     "formik": "2.2.9",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "react-router-dom": "^6.2.1",
+    "react-router-dom": "6.2.1",
     "react-scripts": "5.0.0",
     "web-vitals": "2.1.4"
   },
@@ -22,7 +22,7 @@
     "test": "react-scripts test",
     "test:watch": "react-scripts test --watch",
     "co": "npx sui-mono commit",
-    "build:css": "postcss src/assets/tailwind.css -o src/assets/main.css",
+    "build:css": "npx tailwindcss -i ./src/index.css",
     "watch:css": "postcss src/assets/tailwind.css -o src/assets/main.css -w"
   },
   "eslintConfig": {
@@ -46,13 +46,13 @@
   "devDependencies": {
     "@s-ui/mono": "2.21.0",
     "autoprefixer": "10.4.2",
-    "eslint": "8.9.0",
+    "eslint": "7.32.0",
     "eslint-config-standard": "16.0.3",
     "eslint-plugin-import": "2.25.4",
     "eslint-plugin-node": "11.1.0",
-    "eslint-plugin-promise": "6.0.0",
-    "eslint-plugin-react": "7.28.0",
+    "eslint-plugin-promise": "5.2.0",
+    "eslint-plugin-react": "7.29.2",
     "postcss-cli": "9.1.0",
-    "tailwindcss": "3.0.22"
+    "tailwindcss": "3.0.23"
   }
 }
